--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,16 @@
 
-
-
 div.graph {
     position: relative;
-    width: 300px;
-    height: 300px;
     cursor: pointer;
+    margin: 0 auto; 
 }
   
+.axis {
+    fill: white;
+    stroke: white;
+}
+
 svg.viewbox{
-    
     position:absolute;
     top:0px;
     left:-5px
@@ -31,4 +32,15 @@ div.verticalLine {
 
 svg.point {
     position:absolute;
+}
+
+.btn-secondary,
+.btn-secondary:hover,
+.btn-secondary:focus {
+  color: #333;
+  text-shadow: none;
+}
+
+.btn-group {
+    margin-top: 30px;
 }
